# engine

./: .gitignore  CMakeLists.txt
TP1/: Material.hpp  Mesh.h  Square.h  TP1.cpp  fragment_shader.glsl  vertex_shader.glsl
common/: controls.cpp  controls.hpp  texture.cpp  texture.hpp
data/models/: icosphere.off  icosphere1.off  icosphere2.off
engenius/: BoxCollider.h  Entity.h  Mesh.h  Model.h  RigidBody.h  Sphere.h  Square.h  Triangle.h  engenius  main.cpp
engenius/shaders/: fragment_solarsystem.glsl  fragment_terrain.glsl  vertex_solarsystem.glsl  vertex_terrain.glsl
